--- a/contact.html
+++ b/contact.html
@@ -22,12 +22,8 @@
                 </ul>
             </div>
             <ul>
-                <div id="centerNav">
-                    <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li id="activeLink">CONTACT</li>
-                </div>
                 <div id="rightNav">
+                    <li><a href="contact.html"><img src="images/icon-phone.svg" id="icon-nav"></a></li>
                     <li><a href="https://www.linkedin.com/in/rayn-victor" target="_blank"><img src="images/icon-linkedin2.svg" id="icon-nav"></a></li>
                     <li><a href="https://vimeo.com/raynvictor" target="_blank"><img src="images/icon-vimeo2.svg" id="icon-nav"></a></li>
                     <li><a target="_blank"><img src="images/icon-instagram2.svg" id="icon-nav"></a></li>
@@ -36,7 +32,7 @@
         </nav>
         <div class="contactSection">
             <div class="contactForm">
-                <form>
+                <form action="mail.php" method="POST">
                     <h2 id="formTitle">Let's talk.</h2>
                     <p>If you would like to chat about projects, inquiries or worldly concerns such as Batman, feel free to slide into my inbox -</p>
                     <label id="name" for="name">Name *</label>
