--- a/projects/life-squared.html
+++ b/projects/life-squared.html
@@ -14,7 +14,7 @@
     <title>Rayn Victor</title>
 </head>
 <body>
-    <header class="projectHero">
+    <header class="projectHero" id="life-squared-hero">
         <div class="projectHeroCon">
             <section>
                 <a href="../index.html"><img src="../images/logo.svg" id="logo"></a>
@@ -33,12 +33,8 @@
                 </ul>
             </div>
             <ul>
-                <div id="centerNav">
-                    <li><a href="../projects.html">PROJECTS</a></li>
-                    <li><a href="../about.html">ABOUT</a></li>
-                    <li><a href="../contact.html">CONTACT</a></li>
-                </div>
                 <div id="rightNav">
+                    <li><a href="../contact.html"><img src="../images/icon-phone.svg" id="icon-nav"></a></li>
                     <li><a href="https://www.linkedin.com/in/rayn-victor" target="_blank"><img src="../images/icon-linkedin2.svg" id="icon-nav"></a></li>
                     <li><a href="https://vimeo.com/raynvictor" target="_blank"><img src="../images/icon-vimeo2.svg" id="icon-nav"></a></li>
                     <li><a target="_blank"><img src="../images/icon-instagram2.svg" id="icon-nav"></a></li>
@@ -58,12 +54,12 @@
                 <iframe src="https://player.vimeo.com/video/400332702" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </div>
             <div class="verticleLine" id="line2"></div>
-            <p>I worked on print designs such as complimentary gift bags, T-Shirts and social media advertisements that would appear in Snapchat or Instagram stories, to gather the highest amount of views, that would be a part of the campaign.</p>
-            <div class="od-mockups">
-                <div id="od-mockup1" class="od-mockup"></div>
-                <div id="od-mockup2" class="od-mockup"></div>
-                <div id="od-mockup3" class="od-mockup"></div>
-                <div id="od-mockup4" class="od-mockup"></div>
+            <p>I worked on print designs such as complimentary gift bags, T-Shirts and social media advertisements that would be a part of the campaign. The concept of social media advertisements would snag the highest amount of audience and the complimentary items provided motivation for attendace at conventions hosted by the campaign.</p>
+            <div class="mockupsImgCon">
+                <div id="od-mockup1" class="mockupImg"></div>
+                <div id="od-mockup2" class="mockupImg"></div>
+                <div id="od-mockup3" class="mockupImg"></div>
+                <div id="od-mockup4" class="mockupImg"></div>
             </div>
         </section>
         <div class="nextButton">
@@ -73,7 +69,7 @@
         </div>
         <footer><img src="../images/icon-up.svg" id="icon-up"></footer>
     </section>
-    <script src="/js/scripts/ScrollToPlugin.min.js"></script>
+    <script src="../js/scripts/ScrollToPlugin.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="../js/main.js"></script>
 </body>
