--- a/projects/winexbeatles.html
+++ b/projects/winexbeatles.html
@@ -14,7 +14,7 @@
     <title>Rayn Victor</title>
 </head>
 <body>
-    <header class="projectHero">
+    <header class="projectHero" id="winexbeatles-hero">
         <div class="projectHeroCon">
             <section>
                 <a href="../index.html"><img src="../images/logo.svg" id="logo"></a>
@@ -33,12 +33,8 @@
                 </ul>
             </div>
             <ul>
-                <div id="centerNav">
-                    <li><a href="../projects.html">PROJECTS</a></li>
-                    <li><a href="../about.html">ABOUT</a></li>
-                    <li><a href="../contact.html">CONTACT</a></li>
-                </div>
                 <div id="rightNav">
+                    <li><a href="../contact.html"><img src="../images/icon-phone.svg" id="icon-nav"></a></li>
                     <li><a href="https://www.linkedin.com/in/rayn-victor" target="_blank"><img src="../images/icon-linkedin2.svg" id="icon-nav"></a></li>
                     <li><a href="https://vimeo.com/raynvictor" target="_blank"><img src="../images/icon-vimeo2.svg" id="icon-nav"></a></li>
                     <li><a target="_blank"><img src="../images/icon-instagram2.svg" id="icon-nav"></a></li>
@@ -48,8 +44,25 @@
 
         <section class="projectCase" id="winexbeatles">
             <h1 id="pageTitle">WINE X BEATLES</h1>
-            <p>Life-Squared is a campaign aimed at raising awareness for organ donation to help with research in regenerative bio-technology in organ transplantation.</p>
-        
+            <p>The project is based on designing a mashup between a famous brand and a kind of alcoholic beverage for a magazine advertisement. The ones assigned to me were the rock band The Beatles and wine.</p>
+            <div class="bxw-imgCon"><div id="bxw-img1"></div></div>
+            <div class="verticleLine" id="line1"></div>
+            <div class="TIFFcon">
+                <p>Design Keywords: <i>British, vintage, classic, black and white, collaquial, antique, pop rock, romantic, retro, rhone, exquisite, expensive, original, fine, luxury, sleek,  neoclassic, gothic, sparkling, velvet, clear, dubonnet.</i></p>
+                <img class="bxw-imgCon" id="bottle-model" src="../images/bottle-model.jpg" id="label3">
+            </div>
+            <div class="hugeX"><p>X</p></div>
+            <img class="bxw-imgCon" id="wine-label-1" src="../images/wine-label-1.jpg" id="label1">
+            <img class="bxw-imgCon" id="wine-label-2" src="../images/wine-label-2.jpg" id="label2">
+            <div class="verticleLine" id="line2"></div>
+            <p>The labels are a classy combination between the Beatles as a band complete with their official logo as well as one of their most popular symbolism - an Abbey Road artwork. Marlowe, an old English name, is decided as the title for the rhône blend from Yorkshire, famous for their white wine. </p>
+            <div class="mockupsImgCon">
+                <div id="bxw-mockup1" class="mockupImg"></div>
+                <div id="bxw-mockup2" class="mockupImg"></div>
+                <div id="bxw-mockup3" class="mockupImg"></div>
+                <div id="bxw-mockup4" class="mockupImg"></div>
+            </div>
+            
         <div class="nextButton">
             <a href="younges-and-only.html"><img src="../images/icon-right-arrow.svg" alt="next-page">
                 <span class="hoverText">Next Project<br>Youngest and Only</span>
@@ -60,9 +73,9 @@
                 <span class="hoverText">Previous Project<br>Life-Squared</span>
             </a>
         </div>
-        <footer><img src="../images/icon-up.svg" id="icon-up"></footer>
     </section>
-    <script src="/js/scripts/ScrollToPlugin.min.js"></script>
+    <footer><img src="../images/icon-up.svg" id="icon-up"></footer>
+    <script src="../js/scripts/ScrollToPlugin.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="../js/main.js"></script>
 </body>
