--- a/projects/winexbeatles.html
+++ b/projects/winexbeatles.html
@@ -49,7 +49,7 @@
             <div class="verticleLine" id="line1"></div>
             <div class="TIFFcon">
                 <p>Design Keywords: <i>British, vintage, classic, black and white, collaquial, antique, pop rock, romantic, retro, rhone, exquisite, expensive, original, fine, luxury, sleek,  neoclassic, gothic, sparkling, velvet, clear, dubonnet.</i></p>
-                <img class="bxw-imgCon" id="bottle-model" src="../images/bottle-model.jpg" id="label3">
+                <img class="bxw-imgCon" id="bottle-model" src="../images/bottle-model.jpg">
             </div>
             <div class="hugeX"><p>X</p></div>
             <img class="bxw-imgCon" id="wine-label-1" src="../images/wine-label-1.jpg" id="label1">
