--- a/contact.html
+++ b/contact.html
@@ -21,19 +21,14 @@
                     <li><a href="index.html"><img src="images/icon-home.svg" id="icon-home"></a></li>
                 </ul>
             </div>
-            <ul>
-                <div id="rightNav">
-                    <li><a href="contact.html"><img src="images/icon-phone.svg" id="icon-nav"></a></li>
-                    <li><a href="https://www.linkedin.com/in/rayn-victor" target="_blank"><img src="images/icon-linkedin2.svg" id="icon-nav"></a></li>
-                    <li><a href="https://vimeo.com/raynvictor" target="_blank"><img src="images/icon-vimeo2.svg" id="icon-nav"></a></li>
-                    <li><a target="_blank"><img src="images/icon-instagram2.svg" id="icon-nav"></a></li>
-                </div>
-            </ul>
+            <div id="rightNav">
+                <a href="contact.html"><h1>LET'S TALK</h1></a></li>
+            </div>
         </nav>
         <div class="contactSection">
             <div class="contactForm">
                 <form action="mail.php" method="POST">
-                    <h2 id="formTitle">Let's talk.</h2>
+                    <h2 id="formTitle">GET IN TOUCH</h2>
                     <p>If you would like to chat about projects, inquiries or worldly concerns such as Batman, feel free to slide into my inbox -</p>
                     <label id="name" for="name">Name *</label>
                     <input type="text" id="name" placeholder="Captain Kirk" required>
@@ -59,7 +54,9 @@
                 </ul>
             </div>
         </div>
-        <footer><img src="images/icon-up.svg" id="icon-up"></footer>
+        <footer>
+            <p id="icon-up">Back to top.</p>
+        </footer>
     </section>
 
     <script src="/js/scripts/ScrollToPlugin.min.js"></script>
