--- a/projects/life-squared.html
+++ b/projects/life-squared.html
@@ -17,8 +17,7 @@
     <header class="projectHero" id="life-squared-hero">
         <div class="projectHeroCon">
             <section>
-                <a href="../index.html"><img src="../images/logo.svg" id="logo"></a>
-                <h1 id="pageTitle">LIFE-SQUARED</h1>
+                <a href="index.html" id="logo"><span></span></a>                <h1 id="pageTitle">LIFE-SQUARED</h1>
                 <h2 id="pageSubtitle">CAMPAIGN | ADVERTISEMENT | ANIMATION</h2>
                 <img src="../images/icon-down.svg" id="icon-down">
             </section>
@@ -32,14 +31,9 @@
                     <li><a href="../index.html"><img src="../images/icon-home.svg" id="icon-home"></a></li>
                 </ul>
             </div>
-            <ul>
-                <div id="rightNav">
-                    <li><a href="../contact.html"><img src="../images/icon-phone.svg" id="icon-nav"></a></li>
-                    <li><a href="https://www.linkedin.com/in/rayn-victor" target="_blank"><img src="../images/icon-linkedin2.svg" id="icon-nav"></a></li>
-                    <li><a href="https://vimeo.com/raynvictor" target="_blank"><img src="../images/icon-vimeo2.svg" id="icon-nav"></a></li>
-                    <li><a target="_blank"><img src="../images/icon-instagram2.svg" id="icon-nav"></a></li>
-                </div>
-            </ul>
+            <div id="rightNav">
+                <a href="contact.html"><h1>LET'S TALK</h1></a></li>
+            </div>
         </nav>
 
         <section class="projectCase" id="life-squared">
@@ -67,7 +61,9 @@
                 <span class="hoverText">Next Project<br>Beatles X Wine</span>
             </a>
         </div>
-        <footer><img src="../images/icon-up.svg" id="icon-up"></footer>
+        <footer>
+            <p id="icon-up">Back to top.</p>
+        </footer>
     </section>
     <script src="../js/scripts/ScrollToPlugin.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
