--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div id="row10"><p>P</p><p>R</p><p>I</p><p>N</p><p>T</p><p>N</p><p>P</p><p>R</p><p>E</p><p>S</p><p>E</p><p>N</p><p>T</p><p>A</p><p>T</p><p>I</p><p>O</p><p>N</p><p>I</p><p>T</p></div>
                     </section>
                     <section>
-                        <a href="index.html"><img src="images/logo.svg" id="logo"></a>
+                        <a href="index.html" id="logo"><span></span></a>
                         <h1 id="pageTitle">PORTFOLIO</h1>
                         <img src="images/icon-down.svg" id="icon-down">
                     </section>
@@ -47,34 +47,33 @@
                             <li><a href="index.html"><img src="images/icon-home.svg" id="icon-home"></a></li>
                         </ul>
                     </div>
-                    <ul><div id="rightNav">
-                        <li><a href="contact.html"><img src="images/icon-phone.svg" id="icon-nav"></a></li>
-                        <li><a href="https://www.linkedin.com/in/rayn-victor" target="_blank"><img src="images/icon-linkedin2.svg" id="icon-nav"></a></li>
-                        <li><a href="https://vimeo.com/raynvictor" target="_blank"><img src="images/icon-vimeo2.svg" id="icon-nav"></a></li>
-                        <li><a target="_blank"><img src="images/icon-instagram2.svg" id="icon-nav"></a></li>
-                    </div></ul>
+                    <div id="rightNav">
+                        <a href="contact.html"><h1>LET'S TALK</h1></a></li>
+                    </div>
                 </nav>
                 <section class="projectList">
                     <div id="project1" class="project">
                         <a href="projects/life-squared.html"><div class="projectDesc">
-                            <h2>Life Squared</h2>
+                            <div class="projectHead" id="projectHead1"><h2>Life-Squared</h2></div>
                             <p>An awareness campaign to promote organ donatation for an advanced research technology.</p>
                         </div></a>
                     </div>
                     <div id="project2" class="project">
                         <a href="projects/winexbeatles.html"><div class="projectDesc">
-                            <h2>Wine x Beatles</h2>
+                            <div class="projectHead" id="projectHead2"><h2>Wine x Beatles</h2></div>
                             <p>A mashup between the brand personality of the Beatles and wine.</p>
                         </div></a>
                     </div>
                     <div id="project3" class="project">
                         <div class="projectDesc">
-                            <h2>Youngest and Only</h2>
+                            <div class="projectHead" id="projectHead3"><h2>Youngest and Only</h2></div>
                             <p>Brand and graphic design for London's very own alternative punk band.</p>
                         </div>
                     </div>
                 </section>
-                <footer><a href="index.html"><img src="images/icon-up.svg" id="icon-up"></a></footer>
+                <footer>
+                    <p id="icon-up">Back to top.</p>
+                </footer>
             </section>
         </section>
         
