--- a/contact.html
+++ b/contact.html
@@ -27,20 +27,20 @@
         </nav>
         <div class="contactSection">
             <div class="contactForm">
-                <form action="mail.php" method="POST">
+                <form action="contact.php" method="post">
                     <h2 id="formTitle">GET IN TOUCH</h2>
                     <p>If you would like to chat about projects, inquiries or worldly concerns such as Batman, feel free to slide into my inbox -</p>
                     <label id="name" for="name">Name *</label>
-                    <input type="text" id="name" placeholder="Captain Kirk" required>
+                    <input type="text" id="name" name="name" placeholder="Captain Kirk" required>
 
                     <label id="email" for="email">Email ID *</label>
-                    <input type="text" id="email" placeholder="jimkirk@starfleet.com" required>
+                    <input type="text" id="email" name="email" placeholder="jimkirk@starfleet.com" required>
 
                     <label id="subject" for="subject">Subject</label>
-                    <input type="text" id="subject" placeholder="What would you like to talk about?">
+                    <input type="text" id="subject" name="subject" placeholder="What would you like to talk about?">
 
                     <label id="message" for="message">Message *</label>
-                    <textarea type="text" id="messagebox" placeholder="Leave me a message." required autocomplete="off"></textarea>
+                    <textarea type="text" id="messagebox" name="message" placeholder="Leave me a message." required autocomplete="off"></textarea>
                     <input type="submit" id="submit" value="SEND">
                 </form>
             </div>
